# vertical_stitching

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  quality_estimation.ipynb  stitcher.h
docs/: Doxyfile
docs/html/: _formulas.tex  annotated.html  classDirectAlignmentStitcher-members.html  classDirectAlignmentStitcher.html  classDirectAlignmentStitcher__coll__graph.map  classDirectAlignmentStitcher__coll__graph.md5  classDirectAlignmentStitcher__inherit__graph.map  classDirectAlignmentStitcher__inherit__graph.md5  classL2DirectAlignmentStitcher-members.html  classL2DirectAlignmentStitcher.html  classL2DirectAlignmentStitcher__inherit__graph.map  classL2DirectAlignmentStitcher__inherit__graph.md5  classMainWindow-members.html  classMainWindow.html  classOpenCVSIFT2DStitcher-members.html  classOpenCVSIFT2DStitcher.html  classOpenCVSIFT2DStitcher__coll__graph.map  classOpenCVSIFT2DStitcher__inherit__graph.md5  classSIFT2DStitcher-members.html  classSIFT2DStitcher.html  classSIFT2DStitcher__inherit__graph.map  classSIFT2DStitcher__inherit__graph.md5  classSIFT3DStitcher-members.html  classSIFT3DStitcher.html  classSIFT3DStitcher__coll__graph.map  classSIFT3DStitcher__inherit__graph.md5  classSeparationStitcher-members.html  classSeparationStitcher.html  classSeparationStitcher__coll__graph.map  classSeparationStitcher__inherit__graph.md5  classStitcherImpl-members.html  classStitcherImpl.html  classStitcherImpl__inherit__graph.map  classStitcherImpl__inherit__graph.md5  classTiffImage-members.html  classTiffImage.html  (+41 more)
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stitcher.cpp  stitcher.h  test.cpp  voxel_container.cpp  voxel_container.h
src/stitcher/: CMakeLists.txt  direct_alignment_stitcher.cpp  direct_alignment_stitcher.h  opencv_sift_2d_stitcher.cpp  opencv_sift_2d_stitcher.h  separation_stitcher.cpp  separation_stitcher.h  sift_2d_stitcher.cpp  sift_2d_stitcher.h  sift_3d_stitcher.cpp  sift_3d_stitcher.h  stitcher.cpp  stitcher.h  tiff_image.h  voxel_container.cpp  voxel_container.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
(+38 files in other folders)
